First commit of custom fuji
