# fuji_server/models/test_rule_output_inner.py
@@ -1,0 +1,71 @@
+# -*- coding: utf-8 -*-
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from fuji_server.models.base_model_ import Model
+from fuji_server import util
+
+
+class TestRuleOutputInner(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self,
+                 prova: str = None):  # noqa: E501
+        """DataFileFormatOutputInner - a model defined in Swagger
+
+        :param file_uri: The file_uri of this DataFileFormatOutputInner.  # noqa: E501
+        :type file_uri: str
+        :param mime_type: The mime_type of this DataFileFormatOutputInner.  # noqa: E501
+        :type mime_type: str
+        :param is_preferred_format: The is_preferred_format of this DataFileFormatOutputInner.  # noqa: E501
+        :type is_preferred_format: bool
+        :param preference_reason: The preference_reason of this DataFileFormatOutputInner.  # noqa: E501
+        :type preference_reason: List[str]
+        :param subject_areas: The subject_areas of this DataFileFormatOutputInner.  # noqa: E501
+        :type subject_areas: List[str]
+        """
+        self.swagger_types = {
+            'prova': str,
+        }
+
+        self.attribute_map = {
+            'prova': 'prova',
+        }
+        self._prova = prova
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'TestRuleOutputInner':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The DataFileFormat_output_inner of this DataFileFormatOutputInner.  # noqa: E501
+        :rtype: DataFileFormatOutputInner
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def prova(self) -> str:
+        """Gets the file_uri of this DataFileFormatOutputInner.
+
+
+        :return: The file_uri of this DataFileFormatOutputInner.
+        :rtype: str
+        """
+        return self._prova
+
+    def prova(self, prova: str):
+        """Sets the file_uri of this DataFileFormatOutputInner.
+
+
+        :param file_uri: The file_uri of this DataFileFormatOutputInner.
+        :type file_uri: str
+        """
+
+        self._prova = prova
